main: Cross platform and added allure environment