@@ -1,10 +1,12 @@
 package pages;
 
+import io.qameta.allure.Step;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ActorPage extends BasePage{
 
@@ -15,9 +17,9 @@ public class ActorPage extends BasePage{
         super(driver);
     }
 
+    @Step("⏩ Verify if movie is in acting timeline. Step...")
     public boolean isMovieInActingTimeline(String movie){
-        List<String> movies = moviesList.stream().map(WebElement::getText).toList();
-
+        List<String> movies = moviesList.stream().map(WebElement::getText).collect(Collectors.toList());
         return movies.contains(movie);
     }
 }
